--- a/index.html
+++ b/index.html
@@ -1,46 +1,53 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Auto-Ticketing</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <style>
     body {
       margin-top: 50px;
       margin-left: 150px;
       margin-right: 150px;
     }
+
     input {
       margin-right: 10px;
     }
+
     label {
       display: none;
     }
   </style>
 </head>
+
 <body>
   <div class="ticketing">
     <h1>I wanna go consert</h1>
     <br><br>
     <div class="mb-3">
       <label for="consertId" class="form-label">Consert ID</label>
-      <input id="consertId" class="form-control" type="text" placeholder="콘서트 ID" required="required"/>
+      <input id="consertId" class="form-control" type="text" placeholder="콘서트 ID" required="required" />
     </div>
     <div class="mb-3">
       <label for="numberPerson">numberPerson</label>
-      <input id="numberPerson" class="form-control" type="number" placeholder="몇개의 좌석을 원하시나요? (숫자만 입력)" required="required"/>
+      <input id="numberPerson" class="form-control" type="number" placeholder="몇개의 좌석을 원하시나요? (숫자만 입력)"
+        required="required" />
     </div>
     <div class="mb-3">
       <label for="day">day</label>
-      <input id="day" class="form-control" type="number" placeholder="원하시는 관람일 (예시 :4월 28일의 경우 28 입력)" required="required"/>
+      <input id="day" class="form-control" type="number" placeholder="원하시는 관람일 (예시 :4월 28일의 경우 28 입력)"
+        required="required" />
     </div>
     <div class="mb-3">
       <label for="userId">User ID</label>
-      <input id="userId" class="form-control" type="text" placeholder="User ID" required="required"/>
+      <input id="userId" class="form-control" type="text" placeholder="User ID" required="required" />
     </div>
     <div class="mb-3">
       <label for="password">Password</label>
-      <input id="password" class="form-control" type="password" placeholder="Password" required="required"/>
+      <input id="password" class="form-control" type="password" placeholder="Password" required="required" />
     </div>
     <br>
     <button id="ticketing" onclick="start()" class="btn btn-primary btn-block btn-large">
@@ -59,9 +66,42 @@
       const day = document.getElementById('day').value;
       const userId = document.getElementById('userId').value;
       const pw = document.getElementById('password').value;
-      
+
       startTicketing(consertId, numberPerson, day, userId, pw);
     }
   </script>
+  <script>
+    const { ipcRenderer } = require('electron');
+
+    function start() {
+      const consertId = document.getElementById('consertId').value;
+      const numberPerson = document.getElementById('numberPerson').value;
+      const day = document.getElementById('day').value;
+      const userId = document.getElementById('userId').value;
+      const pw = document.getElementById('password').value;
+
+      const reserveTime = new Date();
+      reserveTime.setSeconds(reserveTime.getSeconds() + 10); // 10초 뒤 테스트
+
+      ipcRenderer.send('start-automation', {
+        consertId,
+        numberPerson,
+        day,
+        id: userId,
+        pw,
+        reserveTimeStr: reserveTime.toISOString()
+      });
+
+
+      ipcRenderer.on('log-msg', (event, msg) => {
+        const logArea = document.getElementById('logArea');
+        logArea.value += msg + '\n';
+        logArea.scrollTop = logArea.scrollHeight;
+      });
+      log.value += `[INFO] 예약 요청됨: ${reserveTime.toLocaleTimeString()}\n`;
+    }
+  </script>
+
 </body>
+
 </html>
